# is-lab-3

./: 07-ImageSegmentation.ipynb  07-KMeansClustering.ipynb  pyproject.toml  readme.md  results_3_300.csv  results_4_300.csv  test_script.ipynb
