[tool.poetry]
name = "intelligent-systems"
version = "0.1.0"
description = ""
authors = ["Sebastian Vargr <sebbdk@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
imageio = "^2.31.5"
scikit-image = "^0.22.0"
sklearn = "^0.0.post10"
scikit-learn = "^1.3.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
